--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "empire",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.tsx",
     "scripts": {
           "dev": "vite",
           "build": "vite build"
